--- a/Lecture04_Basic_of_python.ipynb
+++ b/Lecture04_Basic_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwR4J6zSmvW0kAvA3ulBOW",
+      "authorship_tag": "ABX9TyP6NJcUtM4wqT3+TNc9+w0O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
       "metadata": {
         "id": "8pWM4kR7iOGU"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "ua6e8gAei4VE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "-bjXwpoEjHeL"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "id": "UcW7gwGvjP-_",
         "outputId": "e5f20ba8-98f8-4bbf-b7f3-09c08ef2e5be"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
         "id": "1RPg0immjZtl",
         "outputId": "66cccd61-8500-443e-9bb0-2a876f2d2f34"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "2lNpC3qSjd1L",
         "outputId": "6a095eb7-a956-4f87-ad3b-a63604fdc810"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
         "id": "7MGeL2kxj_QC",
         "outputId": "c1fe8604-a7bb-4d49-febe-f8d03d3854a4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -209,7 +209,7 @@
         "id": "PJi3V3ePkrUu",
         "outputId": "1cb78b85-f96a-4c33-9ba9-b71b44a8aca6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -237,7 +237,7 @@
         "id": "Uas-DJYpk3xI",
         "outputId": "e8df2795-47db-4069-c465-4c62be5527d3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -300,7 +300,7 @@
       "metadata": {
         "id": "EcRj63JOnh12"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +342,7 @@
           "height": 106
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -371,7 +371,7 @@
       "metadata": {
         "id": "x530SMgapAaa"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
       "metadata": {
         "id": "a0iOoB76qujh"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,7 +605,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,12 +631,64 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Create a simple python program to swap variables using three variables\n",
+        "x=12\n",
+        "y=14\n",
+        "temp=x\n",
+        "x=y\n",
+        "y=temp\n",
+        "print(x)\n",
+        "print(y)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "Zgxfediy1gsd"
+        "id": "Zgxfediy1gsd",
+        "outputId": "d433680d-6813-410d-d045-f5747b02016e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14\n",
+            "12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create a simple python program to swap variables using only two variables\n",
+        "a=16\n",
+        "b=18\n",
+        "a,b=b,a\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "_DlGT13wWZ1l",
+        "outputId": "ec656b7a-b95a-4e43-fdc0-5ac3883856a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "18\n",
+            "16\n"
+          ]
+        }
+      ]
     }
   ]
 }
