--- a/Lecture_5_stage3_Basic_of_python.ipynb
+++ b/Lecture_5_stage3_Basic_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOkkzEhMru7JqI1/AnTZ0j",
+      "authorship_tag": "ABX9TyPKExu9VeSoq+DkGYj0NZRl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "id": "SybgELXnpdy4",
         "outputId": "3630c77e-cd23-4ac7-ca46-650cdd2e0a9b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
         "id": "1Tiwui0Oqj6w",
         "outputId": "f3f985f1-f6c5-41bb-b5f5-49300ad35ecc"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
         "id": "gi-7z_6orwHi",
         "outputId": "c78ff5ed-17ac-4b27-c903-b88e4eea67e0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
         "id": "BbxGK-iXuSxF",
         "outputId": "da95ea88-5617-46b9-bba1-0d2e5b2409af"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
         "id": "V4heaA9owwWl",
         "outputId": "5554b049-82e8-4884-fd6a-8b5df01d97be"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "id": "d4J8SbubxhIx",
         "outputId": "1cae1a9d-e589-4392-8a33-3c5b051b859e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +297,7 @@
         "id": "jCKYeqRKzk53",
         "outputId": "d2d7dd79-dc02-485e-814f-38ce8f46d598"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
         "id": "ZOhuOWUdS26i",
         "outputId": "dc2e174f-3e27-4eb8-8a12-73483ab76f86"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +383,7 @@
         "id": "bJ8mL2CoUEqF",
         "outputId": "ff260676-ee99-4a25-809e-28a5614c601b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,7 +409,7 @@
         "id": "022pCKFwUc0j",
         "outputId": "cc8b7356-409c-438c-98a9-a61456bb1015"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +435,7 @@
         "id": "9hTDKlv_U5Ab",
         "outputId": "20f31cea-b9b2-408f-809b-399228562448"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +461,7 @@
         "id": "QYfZSaSFVYH8",
         "outputId": "475de84a-8fa8-41d7-9665-ad2fbf8243e7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
         "id": "w2-9sy-oWx2M",
         "outputId": "9624b351-348d-4804-d874-60b40be75620"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
         "id": "nfrC1lG2XtNQ",
         "outputId": "41463808-b2ef-48cb-d75c-6738087578a5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +567,7 @@
         "id": "XgHFCEL7ZCs3",
         "outputId": "60ed6370-2676-4abd-f480-3b2a1780c05b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +599,7 @@
       "metadata": {
         "id": "vcRps8ivZia5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -617,7 +617,7 @@
         "id": "6Ei-IXw-a5L9",
         "outputId": "010d981d-034e-45e8-e974-cd16f29ea64e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +662,7 @@
         "id": "P5C47O0ydn_k",
         "outputId": "142607f9-1ea8-4619-e24c-7421bb29b1dd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -702,7 +702,7 @@
         "id": "JoqQjXtkDC3j",
         "outputId": "8931105f-b0cc-4bb8-c8d9-11803338fdfd"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,7 +741,7 @@
         "id": "WKAGbf4dD_Ti",
         "outputId": "f969cd13-8fda-4dd8-df74-c254e90663c2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,7 +839,7 @@
         "id": "mOxuftcl_GMC",
         "outputId": "39ec5221-988a-4833-8014-5b528fa95522"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -875,7 +875,7 @@
         "id": "p6bv1r5g_ob3",
         "outputId": "cdcf98cb-b358-44de-a6f9-13018bc1aa40"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -911,7 +911,7 @@
         "id": "BWmG9S1jAsPO",
         "outputId": "4be20d66-9b81-4b40-ceab-02e13de8e756"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +985,7 @@
         "id": "KSNaDIZ_IU1L",
         "outputId": "0c0c6ab2-4b66-4af5-b8ba-a24e22391295"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1028,7 +1028,7 @@
         "id": "8k07Sl6-KHOx",
         "outputId": "85ca702f-5fe5-4258-92e9-7d9f5fb9c8c7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1070,7 +1070,7 @@
         "id": "gDr05jTsM4tL",
         "outputId": "bfa245f0-bae4-41ec-ef07-71bc506c7d1d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1135,13 +1135,49 @@
         "id": "9aG4ZETeO4qD",
         "outputId": "29ffbc58-e148-4835-d718-3edebd4c2fb9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "{'brand': 'ford', 'model': 'mustang', 'year': 2020}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**The list() Constructor**\n",
+        "\n",
+        "It is also possible to use the list() constructor when creating a new list."
+      ],
+      "metadata": {
+        "id": "CR1hJk5vmyjY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " # note the double round-brackets\n",
+        "thislist = list((\"apple\", \"banana\", \"cherry\"))\n",
+        "print(thislist)"
+      ],
+      "metadata": {
+        "id": "GoWQwRMNnFYH",
+        "outputId": "af44e705-584e-476c-fac8-f0fd39ef1e38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry']\n"
           ]
         }
       ]
