--- a/Lecture_5_stage3_Basic_of_python.ipynb
+++ b/Lecture_5_stage3_Basic_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbdgrfHnoDWMjQXmswj1rF",
+      "authorship_tag": "ABX9TyP3Cvv02p/yVxG+ZgfYCzhk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -653,7 +653,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1178,6 +1178,299 @@
           "name": "stdout",
           "text": [
             "{'brand': 'ford', 'model': 'mustang', 'year': 2020}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Python if...else**\n",
+        "\n",
+        "Python support the usual logical conditions from mathematics:\n",
+        "\n",
+        "python relational operators\n",
+        "\n",
+        "Equal: a==b\n",
+        "\n",
+        "Not equal: a!=b\n",
+        "\n",
+        "Less than: a < b\n",
+        "\n",
+        "Greater than: a > b\n",
+        "\n",
+        "Less than equal to: a <= b\n",
+        "\n",
+        "Greater than equal to: a >= b\n",
+        "\n",
+        "These conditions can be used in several ways, most commonly in 'if statement' and loops\n",
+        "\n",
+        "An 'if statement' is written by using the if key\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "fP9LBL1q4hVB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if statement:\n",
+        "a = 33\n",
+        "b= 200\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")"
+      ],
+      "metadata": {
+        "id": "oS_QUOkR6A9n",
+        "outputId": "a43b64db-cfba-42f1-a888-c84fe4e19d8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b is greater than a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Indentation**\n",
+        "\n",
+        "python relies on indentation (whitespace at the beginnig of line) to define scope in a the code. Other programming language often use curly-bracket for this purpose"
+      ],
+      "metadata": {
+        "id": "96BUN82261YP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 33\n",
+        "b= 200\n",
+        "if b > a:\n",
+        "print(\"b is greater than a\")"
+      ],
+      "metadata": {
+        "id": "vw7FpdtF7d-N",
+        "outputId": "43542985-5234-40a6-f7c9-4e25046e6d8f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "expected an indented block after 'if' statement on line 3 (<ipython-input-3-e5ed151fbdeb>, line 4)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-e5ed151fbdeb>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(\"b is greater than a\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**elif**\n",
+        "\n",
+        "The else keyword catches anything which isn't caught by the preceding conditions."
+      ],
+      "metadata": {
+        "id": "LKUxFYBp8-Tu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 333\n",
+        "b = 333\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "elif b == a:\n",
+        "  print(\"b and a are equle\")"
+      ],
+      "metadata": {
+        "id": "0sxRIwif9W47",
+        "outputId": "e2bb816f-90f2-4cea-b3b2-512eb8408aa5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b and a are equle\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**else**\n",
+        "\n",
+        "The else keyword catches anything which isn't caught by the preceding conditions."
+      ],
+      "metadata": {
+        "id": "k4qDfkAW_icu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 200\n",
+        "b = 33\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "elif a == b:\n",
+        "  print(\"a and b are equal\")\n",
+        "else:\n",
+        "  print(\"a is greater than b\")"
+      ],
+      "metadata": {
+        "id": "8Wwbi6F6_0Q9",
+        "outputId": "d1bcbc13-52bd-4b56-f043-f43a4c736130",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is greater than b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**And**\n",
+        "\n",
+        "The and keyword is a logical operator and is used to combine conditional statement:\n",
+        "\n",
+        "\n",
+        "Test  if a is greater thant b and if c is greater than a:"
+      ],
+      "metadata": {
+        "id": "ezEkARXLBQGj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 200\n",
+        "b = 33\n",
+        "c = 500\n",
+        "if a > b and c > a:\n",
+        "  print(\"both conditions are true\")"
+      ],
+      "metadata": {
+        "id": "DqTm64WzB1Cc",
+        "outputId": "f61bb1f3-0a61-475e-f9a2-baacc25fc96c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "both conditions are true\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**or**\n",
+        "\n",
+        "the or keyword is logical operator,and is used to combine conditional statement."
+      ],
+      "metadata": {
+        "id": "UCdnb6z6EB1U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 200\n",
+        "b = 33\n",
+        "c = 500\n",
+        "if a > b and c > a:\n",
+        "  print(\"At least one of the condition is true\")"
+      ],
+      "metadata": {
+        "id": "dD0brE87EWzM",
+        "outputId": "dd6a350c-9d13-42ab-b1ca-90ebf2d205b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "At least one of the condition is true\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Not**\n",
+        "\n",
+        "The not keyword is a logical operator, and used to reverse the result of condition statement."
+      ],
+      "metadata": {
+        "id": "BxgUEiC4En9X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test if a is Not greater than b\n",
+        "a = 33\n",
+        "b = 200\n",
+        "if not a > b:\n",
+        "  print(\"a is not greater than b\")"
+      ],
+      "metadata": {
+        "id": "IKJhevRPE6aL",
+        "outputId": "8a04b317-b03f-4406-ffff-dbd879ccbcf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is not greater than b\n"
           ]
         }
       ]
