--- a/Lecture_5_stage3_Basic_of_python.ipynb
+++ b/Lecture_5_stage3_Basic_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3Cvv02p/yVxG+ZgfYCzhk",
+      "authorship_tag": "ABX9TyNvNerdRYgD4qqRBolM512p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -667,6 +667,53 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#**Access List Items**\n",
+        "\n",
+        "ist items are indexed and you can access them by referring to the index number:\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BH0JTb_-AFFa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Print the second item of the list\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "print(thislist[1])\n",
+        "\n",
+        "#Print the 3rd item of the list with index\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "print(thislist[-1])\n",
+        "\n",
+        "#Return the third, fourth, and fifth item:\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+        "print(thislist[2:5])\n"
+      ],
+      "metadata": {
+        "id": "0IdrDow3AM3h",
+        "outputId": "90d2ac81-092e-494f-ad6b-87d45cce0a4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "banana\n",
+            "cherry\n",
+            "['cherry', 'orange', 'kiwi']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#**Tuple**\n",
         "\n",
         "Tuple are used to store multiple items in a single variabel.A tuple is collection which is ordered and unchangeable.\n",
@@ -675,6 +722,207 @@
       "metadata": {
         "id": "PndqLbOVbTAF"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#This example returns the items from the beginning to, but NOT including, \"kiwi\":\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+        "print(thislist[:4])\n",
+        "\n",
+        "#This example returns the items from \"cherry\" to the end:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+        "print(thislist[2:])"
+      ],
+      "metadata": {
+        "id": "NpmJJ-w0BiqR",
+        "outputId": "28644e5e-c91f-41a2-b9a2-7f205d1cf6c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry', 'orange']\n",
+            "['cherry', 'orange', 'kiwi', 'melon', 'mango']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#This example returns the items from \"orange\" (-4) to, but NOT including \"mango\" (-1):\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+        "print(thislist[-4:-1])"
+      ],
+      "metadata": {
+        "id": "qBHq2zOYByhf",
+        "outputId": "bade4040-2344-4206-c231-cbf8804dc581",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['orange', 'kiwi', 'melon']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Check if Item Exists**\n",
+        "\n",
+        "To determine if a specified item is present in a list use the in keyword:\n"
+      ],
+      "metadata": {
+        "id": "2Ejussk-CAO1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check if \"apple\" is present in the list:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "if \"apple\" in thislist:\n",
+        "  print(\"Yes, 'apple' is in the fruits list\")"
+      ],
+      "metadata": {
+        "id": "zSYKQBDwCNsT",
+        "outputId": "0eb5b702-fbcd-4b21-f55b-bd4fa046c84f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes, 'apple' is in the fruits list\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Change Item Value**\n",
+        "\n",
+        "To change the value of a specific item, refer to the index number:"
+      ],
+      "metadata": {
+        "id": "lCnTAiXaCl3c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Change the second item:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "thislist[1] = \"blackcurrant\"\n",
+        "print(thislist)"
+      ],
+      "metadata": {
+        "id": "n0jyMhEBCt36",
+        "outputId": "27c4205c-3171-4272-8614-5a3c3f6fa14d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'blackcurrant', 'cherry']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Change a Range of Item Values\n",
+        "#Change the values \"banana\" and \"cherry\" with the values \"blackcurrant\" and \"watermelon\":\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"mango\"]\n",
+        "thislist[1:3] = [\"blackcurrant\", \"watermelon\"]\n",
+        "print(thislist)"
+      ],
+      "metadata": {
+        "id": "VnZYVUlzC-uh",
+        "outputId": "29ca4f53-bf0f-4d4c-9416-f7afbf628e15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'blackcurrant', 'watermelon', 'orange', 'kiwi', 'mango']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Insert Items**\n",
+        "To insert a new list item, without replacing any of the existing values, we can use the insert() method.\n",
+        "\n",
+        "The insert() method inserts an item at the specified index:"
+      ],
+      "metadata": {
+        "id": "15dAcfqdDX32"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Insert \"watermelon\" as the third item:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "thislist.insert(2, \"watermelon\")\n",
+        "print(thislist)"
+      ],
+      "metadata": {
+        "id": "SJ6S_yfvDb6T",
+        "outputId": "2dd25c15-417b-4455-f1ac-fa04b66416e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'watermelon', 'cherry']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1228,7 +1476,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1266,7 +1514,7 @@
           "height": 106
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1306,7 +1554,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1347,7 +1595,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,7 +1636,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1426,7 +1674,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,7 +1712,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
