--- a/Lecture_5_stage3_Basic_of_python.ipynb
+++ b/Lecture_5_stage3_Basic_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvNerdRYgD4qqRBolM512p",
+      "authorship_tag": "ABX9TyNphyY4bhuc6uuA/fR0k+gX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -698,7 +698,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,6 +707,208 @@
             "banana\n",
             "cherry\n",
             "['cherry', 'orange', 'kiwi']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#This example returns the items from the beginning to, but NOT including, \"kiwi\":\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+        "print(thislist[:4])\n",
+        "\n",
+        "#This example returns the items from \"cherry\" to the end:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+        "print(thislist[2:])"
+      ],
+      "metadata": {
+        "id": "uKbAavE1EpOk",
+        "outputId": "2733dd1c-482e-4a91-8d9e-a7fd27fcf9b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry', 'orange']\n",
+            "['cherry', 'orange', 'kiwi', 'melon', 'mango']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Range of Negative Indexes\n",
+        "#Specify negative indexes if you want to start the search from the end of the list\n",
+        "\n",
+        "#This example returns the items from \"orange\" (-4) to, but NOT including \"mango\" (-1):\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"melon\", \"mango\"]\n",
+        "print(thislist[-4:-1])"
+      ],
+      "metadata": {
+        "id": "RAxhSXH7E88y",
+        "outputId": "148d9994-dded-4039-879e-ef826950586a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['orange', 'kiwi', 'melon']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Check if Item Exists**\n",
+        "To determine if a specified item is present in a list use the in keyword:"
+      ],
+      "metadata": {
+        "id": "GoPtwkfGFnHo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check if \"apple\" is present in the list:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "if \"apple\" in thislist:\n",
+        "  print(\"Yes, 'apple' is in the fruits list\")"
+      ],
+      "metadata": {
+        "id": "g8fsvuA1Fr8W",
+        "outputId": "460871f3-dd26-4dd2-9449-121fc2144833",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes, 'apple' is in the fruits list\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Change Item Value**\n",
+        "To change the value of a specific item, refer to the index number"
+      ],
+      "metadata": {
+        "id": "WiGYaYDwF6ms"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Change the second item:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "thislist[1] = \"blackcurrant\"\n",
+        "print(thislist)"
+      ],
+      "metadata": {
+        "id": "wmMAfN-QF8xt",
+        "outputId": "af9e8269-9f81-4d81-c0d4-afa5d0018603",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'blackcurrant', 'cherry']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Change a Range of Item Values\n",
+        "#Change the values \"banana\" and \"cherry\" with the values \"blackcurrant\" and \"watermelon\":\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\", \"orange\", \"kiwi\", \"mango\"]\n",
+        "thislist[1:3] = [\"blackcurrant\", \"watermelon\"]\n",
+        "print(thislist)"
+      ],
+      "metadata": {
+        "id": "mfFfd-JqGIGa",
+        "outputId": "0b51553b-0685-4505-e5ad-038931b87a6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'blackcurrant', 'watermelon', 'orange', 'kiwi', 'mango']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Insert Items**\n",
+        "To insert a new list item, without replacing any of the existing values, we can use the insert() method.\n",
+        "\n",
+        "The insert() method inserts an item at the specified index:"
+      ],
+      "metadata": {
+        "id": "Y50rpOInGd2R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Insert \"watermelon\" as the third item:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "thislist.insert(2, \"watermelon\")\n",
+        "print(thislist)"
+      ],
+      "metadata": {
+        "id": "haYRHZDAGgvP",
+        "outputId": "b12c4641-bba2-491c-a077-acf0d9070df4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'watermelon', 'cherry']\n"
           ]
         }
       ]
@@ -743,7 +945,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +972,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,7 +1010,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -874,7 +1076,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +1115,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
