--- a/Lecture_5_stage3_Basic_of_python.ipynb
+++ b/Lecture_5_stage3_Basic_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNphyY4bhuc6uuA/fR0k+gX",
+      "authorship_tag": "ABX9TyMqwfVDwKiKIpmfeByWH7l6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -731,7 +731,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -761,7 +761,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +798,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,7 +835,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +863,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +902,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,6 +1122,45 @@
           "name": "stdout",
           "text": [
             "['apple', 'banana', 'watermelon', 'cherry']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Loop Through a List**\n",
+        "You can loop through the list items by using a for loop:"
+      ],
+      "metadata": {
+        "id": "FNR7wPLwIbIT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Print all items in the list, one by one:\n",
+        "\n",
+        "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+        "for x in thislist:\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "id": "Yqkwe1LPIg35",
+        "outputId": "71a15dfe-7697-4d6f-e2af-206232dfbc30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "banana\n",
+            "cherry\n"
           ]
         }
       ]
