--- a/Lecture_5_stage3_Basic_of_python.ipynb
+++ b/Lecture_5_stage3_Basic_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPENHBnGnUPIOTBaI5rg3QM",
+      "authorship_tag": "ABX9TyPXS5fg5BONuksPWhJcaexW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -933,11 +933,11 @@
         "  print(x)"
       ],
       "metadata": {
-        "id": "uLPspL42bxn3",
-        "outputId": "2f95605d-0996-4255-f787-0f6af11f4124",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uLPspL42bxn3",
+        "outputId": "2f95605d-0996-4255-f787-0f6af11f4124"
       },
       "execution_count": 1,
       "outputs": [
@@ -951,6 +951,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**List Methods**\n",
+        "Python has a set of built-in methods that you can use on lists."
+      ],
+      "metadata": {
+        "id": "fJ6h44ngdiw1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#(append() Method) Add an element to the fruits list:\n",
+        "\n",
+        "fruits = ['apple', 'banana', 'cherry']\n",
+        "fruits.append(\"orange\")\n",
+        "print(fruits)"
+      ],
+      "metadata": {
+        "id": "7CQSji6AdqCQ",
+        "outputId": "924b8cd8-ba8a-4172-ce45-4e01278c47db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry', 'orange']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#(clear() Method) Remove all elements from the fruits list:\n",
+        "\n",
+        "fruits = ['apple', 'banana', 'cherry', 'orange']\n",
+        "\n",
+        "fruits.clear()"
+      ],
+      "metadata": {
+        "id": "H052aINUd-xU"
+      },
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
